--- a/callFunction.ipynb
+++ b/callFunction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1: Try Custom Function\n",
+    "\n",
+    "In this step, we define and use a custom function `get_weather` to fetch the current temperature for a given set of coordinates. Later, we will explore using OpenAI's built-in capabilities for similar tasks."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,18 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_messages = [\n",
-    "    {\"role\": \"user\", \"content\": \"What's the weather like in Paris today?\"}\n",
+    "    {\"role\": \"user\", \"content\": \"What's the weather like in Tokyo today?\"}\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ResponseFunctionToolCall(arguments='{\"latitude\":48.8566,\"longitude\":2.3522}', call_id='call_sX7Jk3LcQCmCdCKgEY4id8Wr', name='get_weather', type='function_call', id='fc_67fcacc462ac8191b2d7fefa922b69550386f4b1b4b65eb8', status='completed')]"
+       "[ResponseFunctionToolCall(arguments='{\"latitude\":35.682839,\"longitude\":139.759455}', call_id='call_KqM2XlFWwa9VKR6A35JbXK1m', name='get_weather', type='function_call', id='fc_67fcae117d6881918df7e4b719a9abd10a45c2aed1083c1b', status='completed')]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9.2"
+       "20.5"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The current temperature in Paris is 9.2°C.\n"
+      "The weather in Tokyo today is 20.5°C.\n"
      ]
     }
    ],
@@ -173,11 +182,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Step 2: Built-in Functions\n",
+    "\n",
+    "In this step, we explore using OpenAI's built-in functions to handle tasks such as fetching weather data. This approach leverages the model's capabilities to directly interpret and execute function calls, simplifying the workflow and reducing the need for custom implementations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "As of 6:41 AM JST on Monday, April 14, 2025, the weather in Tokyo is mostly sunny with a temperature of 70°F (21°C).\n",
+      "\n",
+      "## Weather for Tokyo, Japan:\n",
+      "Current Conditions: Mostly sunny, 70°F (21°C)\n",
+      "\n",
+      "Hourly Forecast:\n",
+      "* 4:00 PM: 68°F (20°C), Sunny\n",
+      "* 5:00 PM: 67°F (19°C), Sunny\n",
+      "* 6:00 PM: 64°F (18°C), Sunny\n",
+      "* 7:00 PM: 63°F (17°C), Intermittent clouds\n",
+      "* 8:00 PM: 61°F (16°C), Intermittent clouds\n",
+      "* 9:00 PM: 60°F (16°C), Intermittent clouds\n",
+      "* 10:00 PM: 60°F (16°C), Intermittent clouds\n",
+      "* 11:00 PM: 60°F (16°C), Intermittent clouds\n",
+      "* 12:00 AM: 60°F (15°C), Intermittent clouds\n",
+      "* 1:00 AM: 59°F (15°C), Intermittent clouds\n",
+      "* 2:00 AM: 59°F (15°C), Intermittent clouds\n",
+      "* 3:00 AM: 58°F (14°C), Intermittent clouds\n",
+      "\n",
+      "Severe Weather Alerts:\n",
+      "* Shinjuku-ku: Thunderstorm Advisory in effect until 6:00 PM JST.  Source: Japan Meteorological Agency, , Start time: Monday, April 14, 12:00 PM, End time: Monday, April 14, 06:00 PM\n",
+      "\n",
+      "\n",
+      "Please be aware that a Thunderstorm Advisory is in effect for Shinjuku-ku until 6:00 PM JST, as issued by the Japan Meteorological Agency.\n",
+      "\n",
+      "In general, April in Tokyo features mild and pleasant weather, with average high temperatures around 63.7°F (17.6°C) and lows near 51.1°F (10.6°C). The city typically experiences about 12.8 days of rainfall, accumulating approximately 1.54 inches (39mm) of precipitation. ([weather-atlas.com](https://www.weather-atlas.com/en/japan/tokyo-weather-april?utm_source=openai))\n",
+      "\n",
+      "This period also coincides with the cherry blossom season, making it a popular time for visitors. However, it's advisable to check the latest weather updates and any local advisories before planning outdoor activities. \n"
+     ]
+    }
+   ],
+   "source": [
+    "response = client.responses.create(\n",
+    "    model=\"gpt-4o\",\n",
+    "    tools=[{\"type\": \"web_search_preview\"}],\n",
+    "    input=\"What's the weather like in Tokyo today?\",\n",
+    ")\n",
+    "\n",
+    "print(response.output_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Response(id='resp_67fcae27f480819184c8ce682553e906000f6f144f73dc15', created_at=1744612903.0, error=None, incomplete_details=None, instructions=None, metadata={}, model='gpt-4o-2024-08-06', object='response', output=[ResponseFunctionWebSearch(id='ws_67fcae28b1cc819187d18242ea810db4000f6f144f73dc15', status='completed', type='web_search_call'), ResponseOutputMessage(id='msg_67fcae2a819c8191b2c086cd9ebcc632000f6f144f73dc15', content=[ResponseOutputText(annotations=[AnnotationURLCitation(end_index=1420, start_index=1321, title='April weather - Spring 2025 - Tokyo, Japan', type='url_citation', url='https://www.weather-atlas.com/en/japan/tokyo-weather-april?utm_source=openai')], text=\"As of 6:41 AM JST on Monday, April 14, 2025, the weather in Tokyo is mostly sunny with a temperature of 70°F (21°C).\\n\\n## Weather for Tokyo, Japan:\\nCurrent Conditions: Mostly sunny, 70°F (21°C)\\n\\nHourly Forecast:\\n* 4:00\\u202fPM: 68°F (20°C), Sunny\\n* 5:00\\u202fPM: 67°F (19°C), Sunny\\n* 6:00\\u202fPM: 64°F (18°C), Sunny\\n* 7:00\\u202fPM: 63°F (17°C), Intermittent clouds\\n* 8:00\\u202fPM: 61°F (16°C), Intermittent clouds\\n* 9:00\\u202fPM: 60°F (16°C), Intermittent clouds\\n* 10:00\\u202fPM: 60°F (16°C), Intermittent clouds\\n* 11:00\\u202fPM: 60°F (16°C), Intermittent clouds\\n* 12:00\\u202fAM: 60°F (15°C), Intermittent clouds\\n* 1:00\\u202fAM: 59°F (15°C), Intermittent clouds\\n* 2:00\\u202fAM: 59°F (15°C), Intermittent clouds\\n* 3:00\\u202fAM: 58°F (14°C), Intermittent clouds\\n\\nSevere Weather Alerts:\\n* Shinjuku-ku: Thunderstorm Advisory in effect until 6:00 PM JST.  Source: Japan Meteorological Agency, , Start time: Monday, April 14, 12:00 PM, End time: Monday, April 14, 06:00 PM\\n\\n\\nPlease be aware that a Thunderstorm Advisory is in effect for Shinjuku-ku until 6:00 PM JST, as issued by the Japan Meteorological Agency.\\n\\nIn general, April in Tokyo features mild and pleasant weather, with average high temperatures around 63.7°F (17.6°C) and lows near 51.1°F (10.6°C). The city typically experiences about 12.8 days of rainfall, accumulating approximately 1.54 inches (39mm) of precipitation. ([weather-atlas.com](https://www.weather-atlas.com/en/japan/tokyo-weather-april?utm_source=openai))\\n\\nThis period also coincides with the cherry blossom season, making it a popular time for visitors. However, it's advisable to check the latest weather updates and any local advisories before planning outdoor activities. \", type='output_text')], role='assistant', status='completed', type='message')], parallel_tool_calls=True, temperature=1.0, tool_choice='auto', tools=[WebSearchTool(type='web_search_preview', search_context_size='medium', user_location=UserLocation(type='approximate', city=None, country='US', region=None, timezone=None))], top_p=1.0, max_output_tokens=None, previous_response_id=None, reasoning=Reasoning(effort=None, generate_summary=None), status='completed', text=ResponseTextConfig(format=ResponseFormatText(type='text')), truncation='disabled', usage=ResponseUsage(input_tokens=309, input_tokens_details=InputTokensDetails(cached_tokens=0), output_tokens=541, output_tokens_details=OutputTokensDetails(reasoning_tokens=0), total_tokens=850), user=None, store=True)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
   }
  ],
  "metadata": {
